Closed
Bug 1822675
Opened 3 years ago
Closed 3 years ago
Enqueuing on piped ReadableStream causes synchronous write, while not in Blink/WebKit
Categories
(Core :: DOM: Streams, defect)
Core
DOM: Streams
Tracking
()
RESOLVED
FIXED
113 Branch
| Tracking | Status | |
|---|---|---|
| firefox113 | --- | fixed |
People
(Reporter: saschanaz, Assigned: saschanaz)
References
()
Details
Attachments
(2 files)
var con;
new ReadableStream({ start(c) { con = c }}, { highWaterMark: 0 }).pipeTo(
new WritableStream({ write(chunk, c) { console.log(chunk, 'write') } })
)
await Promise.resolve();
con.enqueue('hi');
console.log('hello');
This emits "hello" first on WebKit/Blink but emits "hi write" first on Gecko.
Updated•3 years ago
|
Severity: -- → S3
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Comment 1•3 years ago
|
||
Updated•3 years ago
|
Assignee: nobody → krosylight
Status: NEW → ASSIGNED
Updated•3 years ago
|
Attachment #9323497 -
Attachment description: Bug 1822675 - Call write asynchronously from PipeToPump r=smaug → Bug 1822675 - Part 1: Call write asynchronously from PipeToPump r=smaug
| Assignee | ||
Comment 2•3 years ago
|
||
https://wpt.live/encoding/streams/stringification-crash.html crashes again without this.
Depends on D172794
Pushed by krosylight@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/8b5413c6adaf
Part 1: Call write asynchronously from PipeToPump r=smaug
https://hg.mozilla.org/integration/autoland/rev/f280bc1b1080
Part 2: Do not reject with uncatchable exception r=smaug
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/39103 for changes under testing/web-platform/tests
Comment 5•3 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/8b5413c6adaf
https://hg.mozilla.org/mozilla-central/rev/f280bc1b1080
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
status-firefox113:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 113 Branch
Upstream PR merged by moz-wptsync-bot
You need to log in
before you can comment on or make changes to this bug.
Description
•