Bug 1822675 - Part 1: Call write asynchronously from PipeToPump r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D172794